--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,48 @@ body{
     margin: 0;
 }
 
+input, textarea{
+    font: inherit;
+    padding: 0.2rem 0.4rem;
+    width: 100%;
+    max-width: 30rem;
+    border: 1px solid #ccc;
+}
+
+input:focus, textarea:focus {
+    outline: none;
+    background: #fff5f9;
+}
+
+button {
+    font: inherit;
+    background: #ff0062;
+    border: 1px solid #ff0062;
+    cursor: pointer;
+    color:white;
+}
+
+button:focus{
+    outline:none;
+}
+
+button:hover,
+button:active{
+    background: #a80041;
+    border-color: #a80041;
+
+}
+
+
+.projects {
+    margin: 1rem;
+    border: 1px solid #ff0062;
+}
+
+.projects header {
+    background: #ff0062;
+    height: 3.5rem;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
