--- a/style/style.css
+++ b/style/style.css
@@ -1,126 +1,128 @@
-*{
-    box-sizing:border-box;
-}
-
-body{
+* {
+    box-sizing: border-box;
+  }
+  
+  html {
     font-family: sans-serif;
-    background-color: rgb(255, 255, 255);
+  }
+  
+  body {
     margin: 0;
-}
-
-#description-text{
-    margin-top: 0.5rem;
-    margin-left: 1rem;
-    margin-bottom: 0;
-
-    font-size: 16px;
-}
-
-#description-paragraph{
-    margin-top: 0.2rem;
-    margin-left: 1rem;
-    margin-bottom: 2rem;
-
-    font-size: 12px;
-}
-
-label, input, textarea{
+  }
+  
+  label,
+  input,
+  textarea {
     display: block;
     margin: 0.5rem 0;
-   
-}
-
-label {
+  }
+  
+  label {
     font-weight: bold;
-}
-
-input, textarea{
+  }
+  
+  input,
+  textarea {
     font: inherit;
     padding: 0.2rem 0.4rem;
     width: 100%;
     max-width: 30rem;
     border: 1px solid #ccc;
-}
-
-input:focus, textarea:focus {
+  }
+  
+  input:focus,
+  textarea:focus {
     outline: none;
     background: #fff5f9;
-}
-
-button {
+  }
+  
+  button {
     font: inherit;
     background: #ff0062;
     border: 1px solid #ff0062;
     cursor: pointer;
-    color:white;
-    margin-left: 0.5rem;
-    padding: 0.5rem;
-    font-size: 14px;
-}
-
-button:focus{
-    outline:none;
-}
-
-button:hover,
-button:active{
+    color: white;
+    padding: 0.75rem 1rem;
+  }
+  
+  button:focus {
+    outline: none;
+  }
+  
+  button:hover,
+  button:active {
     background: #a80041;
     border-color: #a80041;
-
-}
-
-
-.projects {
+  }
+  
+  .projects {
     margin: 1rem;
     border: 1px solid #ff0062;
-}
-
-.projects header {
+  }
+  
+  .projects header {
     background: #ff0062;
     height: 3.5rem;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-}
-
-.projects li {
-    box-shadow: 1px 1px 8px rgba(0,0,0,0.26);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #finished-projects {
+    border-color: #0044ff;
+  }
+  
+  #finished-projects header {
+    background: #0044ff;
+  }
+  
+  .projects h2 {
+    margin: 0;
+    color: white;
+  }
+  
+  .projects ul {
+    list-style: none;
+    margin: 0;
+    padding: 1rem;
+  }
+  
+  .projects li {
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
     padding: 1rem;
     margin: 1rem;
-    list-style: none;
-    background: white;
-
-}
-
-.projects li h2 {
+  }
+  
+  .projects li h2 {
     color: #ff0062;
     margin: 0.5rem 0;
-}
-
-#finished-projects li h2 {
+  }
+  
+  #finished-projects li h2 {
     color: #0044ff;
-}
-
-.projects li h3 {
+  }
+  
+  .projects li h3 {
     color: #575757;
     font-size: 1rem;
-}
-
-.project li p {
+  }
+  
+  .project li p {
     margin: 0;
-}
-
-.droppable{
+  }
+  
+  .droppable {
     background: #ffe3ee;
-}
-
-#finished-projects .droppable {
+  }
+  
+  #finished-projects .droppable {
     background: #d6e1ff;
-}
-
-#user-input{
+  }
+  
+  #user-input {
     margin: 1rem;
     padding: 1rem;
     border: 1px solid #ff0062;
     background: #f7f7f7;
-}
+  }
+  
